--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@ title: Dallas Geek Night
 
 Come and work on an Open Source project with friends and strangers.  There are plenty of languages, technologies and to choose from that are regularly developed at Geek Night.  Maybe you have an open source project that you're looking for some help with.  Typically we are going to want to do this with pair programming and in a test driven development (TDD) style.
 
-ThoughtWorks pays for pizza and nibbles, and sodas. See "location":/location.html for getting to the venue in Addison, North Dallas. 
+<br><br>
+
+ThoughtWorks pays for pizza and nibbles, and sodas. See "location":location.html for getting to the venue in Addison, North Dallas. 
+
+<br><br>
+
+h1 Regular projects
+
+<br><br>
+
+"Updatecontrols":http://updatecontrols.codeplex.com and "Correspondence":http://correspondence.codeplex.com : Michael Perry has been working on these for some years, and further improves them at GeekNight now.  C# for the .Net platform.
+
+<br><br>
+
+"SimpleParticles":http://github.com/BillSchofield/simpleParticles is a particle framework for iPhone/iPad games.  Bill started this Objective-C project at Geek Night in Dallas and has been pushing it ever since.
+
+<br><br>
+
+"Compalgo":http://github.com/yujunliang/Compalgo : Yujun Liang has a Google-Collection like way of composing algorithms in Java, and has been pushing it forward at Geek Night. Most recently he and his pair have integrated JBehave 3.0.
+
+<br><br>
 
 <div id="home">
   
