--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@ h1 Regular projects
 
 <br><br>
 
-"Updatecontrols":http://updatecontrols.codeplex.com and "Correspondence":http://correspondence.codeplex.com : Michael Perry has been working on these for some years, and further improves them at GeekNight now.  C# for the .Net platform.
+<a href="http://updatecontrols.codeplex.com">Updatecontrols</a> and <a href="http://correspondence.codeplex.com">Correspondence</a> : Michael Perry has been working on these for some years, and further improves them at GeekNight now.  C# for the .Net platform.
 
 <br><br>
 
-"SimpleParticles":http://github.com/BillSchofield/simpleParticles is a particle framework for iPhone/iPad games.  Bill started this Objective-C project at Geek Night in Dallas and has been pushing it ever since.
+<a href="http://github.com/BillSchofield/simpleParticles">SimpleParticles</a> is a particle framework for iPhone/iPad games.  Bill started this Objective-C project at Geek Night in Dallas and has been pushing it ever since.
 
 <br><br>
 
-"Compalgo":http://github.com/yujunliang/Compalgo : Yujun Liang has a Google-Collection like way of composing algorithms in Java, and has been pushing it forward at Geek Night. Most recently he and his pair have integrated JBehave 3.0.
+<a href="http://github.com/yujunliang/Compalgo">Compalgo</a> : Yujun Liang has a Google-Collection like way of composing algorithms in Java, and has been pushing it forward at Geek Night. Most recently he and his pair have integrated JBehave 3.0.
 
 <br><br>
 
