try out include

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ ThoughtWorks pays for pizza and nibbles, and sodas. See "location":location.html
 
 h1 Regular projects
 
+{% include regular_projects.textile %}
+
 <br><br>
 
 <a href="http://updatecontrols.codeplex.com">Updatecontrols</a> and <a href="http://correspondence.codeplex.com">Correspondence</a> : Michael Perry has been working on these for some years, and further improves them at GeekNight now.  C# for the .Net platform.
