--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1 Regular projects
 
 <br><br>
 
-{{ {% include regular_projects.textile %} | | textilize }}
+{{ {% include regular_projects.textile %} | textilize }}
 
 <br><br>
 
